--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -11,12 +11,14 @@
     <p th:text="${'ID: ' + job.id}"></p>
     <p th:text="${'Name: ' + job.name}"></p>
     <p>
-        Employer: <a th:href="@{'/employers/view/' + ${job.employer.id}}" th:text="${job.employer.name}"></a>
+        Employer: <a th:href="@{'/employers/view/' + ${job.employer.id}}"
+                     th:text="${job.employer.name}"></a>
     </p>
     <p> Skills:
         <ul>
             <li th:each="skill : ${job.skills}">
-                <a th:href="@{'/skills/view/' + ${skill.id}}" th:text="${skill.name}"></a>
+                <a th:href="@{'/skills/view/' + ${skill.id}}"
+                   th:text="${skill.name}"></a>
             </li>
         </ul>
     </p>
