--- a/src/main/resources/templates/employers/index.html
+++ b/src/main/resources/templates/employers/index.html
@@ -12,7 +12,8 @@
     <h2>Employers</h2>
     <ul>
         <li th:each="employer : ${employers}">
-            <a th:href="@{'/employers/view/' + ${employer.id}}" th:text="${employer.name}"></a>
+            <a th:href="@{'/employers/view/' + ${employer.id}}"
+               th:text="${employer.name}"></a>
         </li>
     </ul>
     <a th:href="@{'/employers/add'}">Add Employers</a>
